Updated pom file for compatibility